2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	Genmenu documented.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Minor improvements of genmenu messages.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Add `Note:' prefix to genmenu notification messages.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	* doc/tutorials/dmp:
	DMP documentation updated.

2009-09-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Remove obsolete db column c_pytis_menu_actions.parent_action.

2009-09-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Fix crash in menu editing of multiform rights.

2009-09-08  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fixes of subforms definitions in genmenu.

2009-09-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Use proper order of subforms when determining multiform access rights.

2009-09-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix computing multiform rights.

2009-09-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Fix editing menu records in the menu rights multiform.

2009-09-04  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Update subactions check in genmenu.

2009-09-04  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Bind c_pytis_menu_actions to ev_pytis_menu_structure by fullname, not shortname.

2009-09-04  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Generate menu subforms for all dual forms and only for dual forms.

2009-09-04  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* tools/genmenu.py:
	Initial support for subform titles.

2009-09-03  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Fixes in menu editing.

2009-09-03  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Improvements of the menu position selection form.
